# nanoCosmos

./: .gitignore  README.md  data  numa_run.sh  pyproject.toml  requirements.txt
configs/: combine.yaml  cosmos3nano3d.yaml  cosmospredict3d.yaml  default.yaml  nanocosmos-16B.yaml  nanocosmos-2B-GB300.yaml  nanocosmos-2B.yaml  nanocosmos-4B.yaml  nanocosmos_joint.yaml  snemi3d.yaml
doc/: ARCHITECT.md  CONTRIBUTING.md  DATASETS.md  GOTCHAS.md  INDEX.md  JOINT_TRAINING.md  MUTEXWATERSHED.md  ORGANIZATION.md  RESOLUTION_LADDER.md  STRUCTURE.md  WALKTHROUGH.md  data.csv
doc/assets/: mutex_watershed_slide.py
doc/figures/: cosmos3edge_dataflow.py  cosmos3edge_graphical_abstract.py  cosmos3edge_teaser.py  cosmos3edge_teaser.tex
nanocosmos/: __init__.py
nanocosmos/callbacks/: __init__.py  memory.py
nanocosmos/callbacks/tensorboard/: __init__.py  heads.py  image_logger.py  joint3d_logger.py  joint_logger.py  tags.py  viz.py
nanocosmos/datamodules/: __init__.py  base.py  cremi3d.py  flyem3d.py  joint.py  joint3d.py  microns.py  neurons.py  snemi3d.py
nanocosmos/datasets/: __init__.py  _patches.py  base.py  cremi3d.py  flyem3d.py  lazy.py  microns.py  neurons.py  snemi3d.py
nanocosmos/inference/: __init__.py  mutex_watershed.py  sliding_window.py
nanocosmos/losses/: __init__.py  _common.py  affinity.py  dice_bce_focal.py  joint.py  joint3d.py
nanocosmos/metrics/: __init__.py  instance.py  semantic.py
nanocosmos/models/: __init__.py  base.py
nanocosmos/models/cosmos_2_5_common/: __init__.py  decoder.py  fp8.py  hf_loader.py  layers.py  standalone_dit.py  variants.py  wrapper_base.py
nanocosmos/models/cosmos_3_common/: __init__.py  reduce.py  variants.py  wrapper.py  wrapper_base.py
nanocosmos/models/cosmos_3_edge/: __init__.py  variants.py  wrapper.py
nanocosmos/models/cosmos_3_nano/: __init__.py  variants.py  wrapper.py  wrapper_base.py
nanocosmos/models/cosmos_3_super/: __init__.py  variants.py  wrapper.py
nanocosmos/models/cosmos_predict_2_5/: __init__.py  variants.py  wrapper.py
nanocosmos/models/cosmos_transfer_2_5/: __init__.py  variants.py  wrapper.py
nanocosmos/models/vista/: __init__.py  heads.py  hf_loader.py  wrapper.py
nanocosmos/modules/: __init__.py  base.py  joint.py  joint3d.py
nanocosmos/preprocessors/: __init__.py  base.py  hdf5.py  nfty.py  nrrd.py  tiff.py
nanocosmos/transforms/: __init__.py  degrade.py  edt.py  find_boundaries.py  fine_grid.py  label.py  missing_slice.py  rand_crop_foreground.py  rand_transpose_xy.py  resolution_zoom.py
nanocosmos/utils/: __init__.py  io.py
nanocosmos/visualizer/: __init__.py  __main__.py  app.py  volume_loader.py
scripts/: convert_mitoem2.py  download_all.py  download_cosem3d.py  download_cremi3d.py  download_flyem3d.py  download_microns.py  download_snemi3d.py  download_zenodo_582636.py  train.py
tests/: __init__.py  test_cosmos_predict.py  test_datamodules.py  test_datasets.py  test_joint.py  test_joint_datamodule.py  test_joint_module.py  test_losses.py  test_patches.py  test_preprocessors.py  test_sliding_window.py  test_tensorboard_heads.py  test_utils.py
(+22 files in other folders)
