[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanocosmos"
version = "0.1.0"
description = "A modular PyTorch Lightning infrastructure for connectomics research."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
# Core runtime dependencies.  These are the imports actually exercised
# by ``import nanocosmos`` and by the standard training / inference path.
# Optional features (Cosmos backbone, GPU acceleration, the JS
# visualizer, download scripts) live in ``[project.optional-dependencies]``
# below so a vanilla install stays slim.
dependencies = [
    "torch>=2.1.0",
    "pytorch-lightning>=2.1.0",
    "monai>=1.3.0",
    "einops>=0.7.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "h5py>=3.9.0",
    "tifffile>=2023.7.0",
    "pynrrd>=1.0.0",
    "nibabel>=5.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "scikit-image>=0.21.0",  # CPU fallback for transforms.label / find_boundaries
    "tqdm>=4.65.0",          # sliding-window progress bar (lazily imported)
    "wandb>=0.15.0",
    "tensorboard>=2.14.0",
    "rich>=13.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
# Cosmos backbones (Cosmos 2.5 Predict/Transfer + Cosmos 3 Nano).
# Pulls HuggingFace + diffusers (+ transformers for the Cosmos 3 omni
# Qwen3-VL / Qwen2 sub-towers).
#
# NOTE: the default ``cosmos3nano3d`` backbone needs
# ``Cosmos3OmniTransformer``, which is only on diffusers git main as of
# this writing -- the ``>=0.37.0`` lower bound here is a placeholder.
# Until a release ships the class, install the git-main build pinned in
# ``requirements.txt`` (``diffusers @ git+https://github.com/huggingface/diffusers.git``);
# otherwise the wrapper falls back to a randomly-initialised DiT.  Bump
# this lower bound to the first release exposing the class once it lands.
cosmos = [
    "diffusers>=0.37.0",
    "transformers>=4.57.0",
    "huggingface_hub>=1.6.0",
    # git-main diffusers requires safetensors>=0.8.0rc0.
    "safetensors>=0.8.0rc0",
    "accelerate>=1.13.0",
]
# cupy wheels for the GPU Mutex Watershed (``mws_cp``) + DLPack interop
# and cupy/cucim-backed transforms (EDT / gaussian / connected
# components; optional, scipy/skimage CPU fallback).
# Must be installed via NVIDIA's index, e.g.:
#   pip install -e ".[gpu-cu13]" --extra-index-url https://pypi.nvidia.com
gpu-cu13 = [
    "cupy-cuda13x>=14.0",
]
gpu-cu12 = [
    "cupy-cuda12x>=13.0",
]
# Download helpers in ``scripts/download_*.py``.
scripts = [
    "cloud-volume>=10.4.0",
    "requests>=2.31.0",
]
# Optional viewer (``nanocosmos.visualizer``) and richer figures.
viz = [
    "Pillow>=10.0.0",
    "plotly>=5.24.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
include = ["nanocosmos*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
